--- a/app/design/frontend/creo/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list.phtml
@@ -40,7 +40,7 @@ $_helper = $this->helper('catalog/output');
     <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
     <div class="category-products">
-    <?php //echo $this->getToolbarHtml() ?>
+    <?php echo $this->getToolbarHtml() ?>
         <?php // List mode  ?>
         <?php if ($this->getMode() != 'grid'): ?>
             <?php $_iterator = 0; ?>
@@ -157,7 +157,10 @@ $_helper = $this->helper('catalog/output');
         <?php endif; ?>
 
         <div class="toolbar-bottom">
-            <?php echo $this->getToolbarHtml() ?>
+            <?php //echo $this->getToolbarHtml() ;
+			
+				echo $this->getToolbarBlock()->setTemplate('catalog/product/list/toolbar-bottom.phtml')->toHtml() ;
+			?>
         </div>
     </div>
 <?php endif; ?>
