--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -2545,7 +2545,7 @@ div.fme-filter dd li{overflow: visible !important;}
     text-align: left;
     padding-left: 55px;
 }
-/*.cart-table-area tr{/*border-bottom: 2px dotted #2e2e2e;*/background: url('images/border-slice.png') repeat-x bottom }*/
+/*.cart-table-area tr{border-bottom: 2px dotted #2e2e2e; background: url('images/border-slice.png') repeat-x bottom }*/
 .cart-table-area .alignleft{
     float: left;
     width: 78px;
@@ -5014,7 +5014,7 @@ textarea {
 .modal {z-index: 999999;}
 .modal-backdrop {z-index: 99999;}
 .slide .product-image{z-index: auto;}
-
+#checkout-review-table tr{min-height: 125px;}
 
 
 
