--- a/app/design/frontend/creo/default/layout/tabsextension.xml
+++ b/app/design/frontend/creo/default/layout/tabsextension.xml
@@ -1,16 +1,19 @@
+<?xml version="1.0"?>
 <layout version="0.1.0">
  <extension_index_seller>
-        <!-- extensionseller -->
+        <!-- set title -->
         <reference name="head">
             <action method="setTitle">
                 <title>Best Seller</title>
             </action>
         </reference>
+		<!-- Switch root template to 1 column -->
          <reference name="root">
-            <action method="setTemplate"><template>page/filters.phtml</template></action>
+            <action method="setTemplate"><template>page/1column.phtml</template></action>
         </reference>
+		
         <reference name="content">
-            <block type="extension/seller" name="bestseller" as="bestseller"  template="magpassion_quickview/quickview/catalog/product/list.phtml">
+            <block type="extension/seller" name="bestseller" as="bestseller"  template="tabs/extension/bestseller.phtml">
             	<block type="catalog/product_list_toolbar" name="product_list_toolbar" template="catalog/product/list/toolbar.phtml">
                     <!-- Add pager to toolbar -->
                     <block type="page/html_pager" name="product_list_toolbar_pager"/>
@@ -29,9 +32,15 @@
                     <value>asc</value>
                 </action>
  
-                <action method="setColumnCount">
-                    <coulumn>5</coulumn>
-                </action>
+                 <action method="setColumnCount"><column_count>6</column_count></action>
+          <action method="setToolbarBlockName"><name>product_list_toolbar</name></action>
+          <action method="addColumnCountLayoutDepend"><layout>empty</layout><count>6</count></action>
+          <action method="addColumnCountLayoutDepend"><layout>one_column</layout><count>5</count></action>
+          <action method="addColumnCountLayoutDepend"><layout>two_columns_left</layout><count>4</count></action>
+          <action method="addColumnCountLayoutDepend"><layout>two_columns_right</layout><count>4</count></action>
+          <action method="addColumnCountLayoutDepend"><layout>three_columns</layout><count>3</count></action>
+          <action method="setToolbarBlockName"><name>product_list_toolbar</name></action>       
+	
             </block>
            
         </reference>
