--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -2538,6 +2538,7 @@ div.fme-filter dd li{overflow: visible !important;}
     left: 0;
     border-left: 2px solid #f3f3f3;
     content: '';
+    min-height: 96px;
 }
 .cart-table-area td:first-child:before{display: none;}
 .cart-table-area td:first-child{
