--- a/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
+++ b/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
@@ -12,6 +12,9 @@ $_swatches_height = (int) $_settings['swatch_height'];
 <?php if ($_product->isSaleable() && count($_json_config["attributes"])): ?>
     <dl id="options-container-<?php echo $_product_id; ?>">
         <?php foreach ($_json_config["attributes"] as $_attribute): ?>
+        <?php if($_attribute["id"]=='154' or $_attribute["id"]=='157' or $_attribute["id"]=='149' or $_attribute["id"]=='151'){
+          continue;
+         }?>
         <div class="attributeItem">
             <dt id="label-attribute-<?php echo $_attribute["id"] ?>"><label class="required"><em>*</em><?php echo $_attribute["label"] ?></label><span class="selected-label">&nbsp;</span>   </dt>
             <dd class="option-container">
