--- a/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
@@ -72,8 +72,13 @@
                   </select><?php */ ?>
                 <label><?php echo $this->__('Sort By:') ?></label>
                 <div class=" sortbycontainer open-close"> <a id="sortbyopener" class="" href="javascript:void(0)">
-                        <?php if ($_GET['order']) {
-                            echo ucfirst($_GET['order']);
+                        <?php 
+						if ($_GET['order']) {
+						  	if($_GET['order'] == 'created_at'){										
+	                           	echo ucfirst('new');
+							}else{
+	                           	echo ucfirst($_GET['order']);
+							}
                         } else {
                             echo "Name";
                         } ?>
