layered nav styling

--- a/app/design/frontend/creo/default/template/catalog/category/view.phtml
+++ b/app/design/frontend/creo/default/template/catalog/category/view.phtml
@@ -91,7 +91,7 @@
 
 <?php if($_description=$this->getCurrentCategory()->getDescription()): ?>
     <div class="category-description std">
-        <?php echo $_helper->categoryAttribute($_category, $_description, 'description') ?>
+        <?php // echo $_helper->categoryAttribute($_category, $_description, 'description') ?>
     </div>
     <?php endif; ?>
 
