--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -1454,7 +1454,7 @@ input[type="submit"]:hover {
 }
 .cate-links li{
     display:inline-block;
-    vertical-align:middle;
+    vertical-align:top;
 }
 .cate-links a{color:#000;}
 .cate-links .cate1 li{margin:0 5px 5px 0;}
@@ -1485,7 +1485,7 @@ input[type="submit"]:hover {
     color:#767676;
     background:#ddd;
     display:block;
-    padding:0px 10px;
+    padding: 0 10px !important;
     border:1px solid #ddd;
     transform: skewX(-18deg);
     -moz-transform: skewX(-18deg);
@@ -5037,6 +5037,102 @@ textarea {
 
 
 
+
+
+
+
+
+
+
+
+
+#fme_filters_list .open-close {
+    float: left;
+    position: relative;
+    margin: 0 25px 0 0;
+    z-index: 22;
+}
+#fme_filters_list .open-close .opener {
+    display: inline-block;
+    vertical-align: top;
+    padding: 0 13px 0 7px;
+    position: relative;
+    color: #222;
+    text-transform: uppercase;
+    font: 14px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+#fme_filters_list .open-close.active .opener,
+#fme_filters_list .open-close .opener:hover {
+    text-decoration: none;
+    background: #f5f5f5;
+}
+#fme_filters_list .open-close .opener:before {
+    font-family: 'fontello';
+    font-size: 8px;
+    line-height: 19px;
+    width: 9px;
+    height: 19px;
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    content: '\e812';
+}
+#fme_filters_list .open-close ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    background: #fff;
+    min-width: 99px;
+    text-align: center;
+    position: absolute;
+    text-transform: uppercase;
+    box-shadow: 0 1px 2px #ccc;
+    font: 10px/14px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+#fme_filters_list .open-close .slide li{display: block;}
+#fme_filters_list .open-close li a {
+    display: block;
+    color: #666;
+    padding: 5px 10px;
+}
+#fme_filters_list .open-close li a:hover {
+    color: #fff;
+    background: #000;
+    text-decoration: none;
+}
+#fme_filters_list .styles-lable {
+    float: left;
+    margin: 0 10px 0 0;
+    position: static;
+    vertical-align: top;
+    font: 14px/20px "Roboto Condensed",Helvetica,Arial,sans-serif;
+}
+#fme_filters_list ul,
+#fme_filters_list ol{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+div.fme-filter dd a{padding: 0 !important;}
+.layered-navigation-swatch {
+    border: 1px solid #eee;
+    height: 18px !important;
+    width: 18px !important;
+    margin: 0 !important;
+    transform: skewX(-15deg);
+    -moz-transform: skewX(-15deg);
+    -webkit-transform: skewX(-15deg);
+    -ms-transform: skewX(-15deg);
+}
+.tshirt-colors-area{
+    float: left;
+    margin: 0 25px 0 0;
+}
+.cate-links .actions {
+    font: 12px/20px "Roboto Condensed",Helvetica,Arial,sans-serif;
+    text-transform: uppercase;
+    margin: 0 !important;
+}
 
 
 
