--- a/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
@@ -190,9 +190,9 @@
             <h2>MEN &amp; WOMEN</h2>
             <div class="links-frame">
                 <ul class="sorting-items">
-                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/trending/?id=3" ?>">Trending</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending/?id=3" ?>">Trending</a></li>
                     <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller/?id=3" ?>">Best Seller</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/new/?id=3" ?>">NEW</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection/?id=3" ?>">NEW</a></li>
 
                 </ul>
 
@@ -264,9 +264,9 @@ endforeach;
             <h2>MEN &amp; WOMEN</h2>
             <div class="links-frame">
                 <ul class="sorting-items">
-                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/trending/?id=5" ?>">Trending</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/seller/?id=5" ?>">Best Seller</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/new/?id=5" ?>">NEW</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending/?id=5" ?>">Trending</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller/?id=5" ?>">Best Seller</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection/?id=5" ?>">NEW</a></li>
 
                 </ul>
                 <ul class="links">
@@ -311,9 +311,9 @@ endforeach;
             <h2>MEN &amp; WOMEN</h2>
             <div class="links-frame">
                 <ul class="sorting-items">
-                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/trending/?id=54" ?>">Trending</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/seller/?id=54" ?>">Best Seller</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/new/?id=54" ?>">NEW</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending/?id=54" ?>">Trending</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller/?id=54" ?>">Best Seller</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection/?id=54" ?>">NEW</a></li>
 
                 </ul>
                 <ul class="links">
