--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -1188,3 +1188,9 @@
 #fme_filters_list #styles_label { display: inline-block !important;}
 #fme_filters_list #fme_layered_styles { display:block !important;} 
 #fme_filters_list #fme_layered_clear_all_btn { display:inline-block !important;}*/
+#fme_layered_universal_categories { display: none; position: absolute; left: 0; top: 22px; background: #fff; float: left;}
+.categories_filtes_custom { position: relative; z-index: 999;}
+.categories_filtes_custom:hover >  #fme_layered_universal_categories { display: block !important;}
+#fme_layered_universal_categories > li {    float: left;    padding: 3px 0;    width: 100%;}
+#fme_layered_universal_categories > li a { padding: 0 !important;}
+
